--- a/rootfs/etc/php5/fpm/pool.d/www.conf
+++ b/rootfs/etc/php5/fpm/pool.d/www.conf
@@ -39,7 +39,7 @@ php_admin_value[date.timezone] = UTC
 ################
 php_admin_value[opcache.memory_consumption] = 128M
 php_admin_value[opcache.max_accelerated_files] = 32000
-php_admin_flag[opcache.fast_shutdown] = 0
+php_admin_flag[opcache.fast_shutdown] = on
 
 #### PATHS ###
 ################
